[package]
name = "tombl"
version = "0.1.0"
edition = "2021"

[target.release]
panic = "abort"
lto = "fat"

[dependencies]
clap = { version = "3.2.17", features = ["derive"] }
serde = { version = "1.0.144", features = ["derive"] }
shell-escape = "0.1.5"
thiserror = "1.0.32"
toml = { version = "0.5.9", features = ["indexmap"] }
