[package]
name = "tombl"
version = "0.2.1"
edition = "2021"

[profile.release]
panic = "abort"
lto = "fat"
codegen-units = 1
opt-level = "s"

[dependencies]
serde = { version = "1.0.144", features = ["derive"] }
shell-escape = "0.1.5"
thiserror = "1.0.32"
toml = { version = "0.5.9", features = ["indexmap"] }
