[package]
name = "tombl"
version = "0.2.3"
edition = "2021"
license = "GPL-3.0-only"
description = "Interopability between bash and the TOML serialization format"
homepage = "https://github.com/snyball/tombl"
repository = "https://github.com/snyball/tombl"
authors = ["Jonas Møller <jonas@moesys.no>"]

[profile.release]
panic = "abort"
lto = "fat"
codegen-units = 1
opt-level = "s"

[dependencies]
shell-escape = "0.1.5"
thiserror = "1.0.32"
toml = "0.5.9"
